FMWK-783 Improve test coverage for batch operations (#891)
* Add tests for batch read and write for both blocking and reactive flows
* Update test entities to use NoArgsConstructor
* Update documentation